[package]
name = "android_logger"
version = "0.11.2"
authors = ["The android_logger Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Nercury/android_logger-rs"
description = """
A logging implementation for `log` which hooks to android log output.
"""
keywords = ["android", "bindings", "log", "logger"]
categories = ["api-bindings"]

[features]
default = ["regex"]
regex = ["env_logger/regex"]

[dependencies]
once_cell = "1"

[dependencies.log]
version = "0"

[dependencies.android_log-sys]
version = "0"

[dependencies.env_logger]
version = "0"
default-features = false

[badges]
travis-ci = { repository = "Nercury/android_logger-rs" }
